--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        .titulo.pagina{
+            color: red;
+        }
+    </style>
 </head>
 <body>
     
 
-    <h1>Odin Recipes</h1>
+    <h1 class="titulo pagina">Odin Recipes</h1>
 
     <ul>
         <li><a href="recipes/tropeiro.html">Tropeiro</a></li>
