--- a/recipes/pf.html
+++ b/recipes/pf.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        h1{
+            color: blue;
+        }
+    </style>
 </head>
 <body>
 
@@ -12,7 +18,7 @@
 
     <img src="../images/Arroz,_feijão_e_farofa.jpg" alt="pf">
 
-    
+
 
     
 </body>
