--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <style>
-        .titulo.pagina{
-            color: red;
-        }
-    </style>
+    <link rel="stylesheet" href="recipes/styles.css">
 </head>
 <body>
     
@@ -18,7 +14,7 @@
     <h1 class="titulo pagina">Odin Recipes</h1>
 
     <ul>
-        <li><a href="recipes/tropeiro.html">Tropeiro</a></li>
+        <li><a href="recipes/tropeiro.html" style="color: red">Tropeiro</a></li>
         <li><a href="recipes/pf.html">Prato Feito</a></li>
         <li><a href="recipes/paodealho.html">Pão de alho</a></li>
     </ul>
